# cgms

./: .env.example  .gitignore  README.md  all_files.txt  cgms_structure.txt  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/bot/: main.py
app/bot/keyboards/: candidate_actions.py
app/core/: config.py  logger.py
app/dashboard/: auth.py  main.py
app/db/: base.py  init_db.py  session.py
app/db/models/: __init__.py  candidate_memory.py  learning.py  memory.py  message.py  user.py
app/services/ai/: llm_service.py
app/services/auth/: auth_dependency.py  jwt_handler.py  security.py
app/services/detection/: decision_detector.py  event_detector.py  orchestrator.py  task_detector.py
app/services/learning/: learning_engine.py
app/services/llm/: llm_service.py
app/services/memory/: deduplicator.py  priority.py  priority_engine.py  save_candidate.py  save_message.py
app/services/product/: product_commands.py
app/services/retrieval/: daily_briefing.py  decision_engine.py  embedding_service.py  explanation_engine.py  get_memories.py  memory_linker.py  nlu.py  predictive_engine.py  proactive_engine.py  query_engine.py  reasoning_engine.py  search_memory.py  self_adjusting_engine.py  semantic_matcher.py  summarizer.py  vector_search.py
app/services/scheduler/: daily_briefing_scheduler.py  reminder_scheduler.py  smart_scheduler.py
app/services/time/: parse_time.py
app/services/time_parser/: __init__.py  absolute.py  defaults.py  natural_language.py  parser.py  relative.py  time_of_day.py  validator.py  (+1 more)
scripts/: create_tables.py
