[project]
name = "cgms"
version = "0.1.0"
description = "Contextual Group Memory System"
authors = [
    {name = "Murphy Sankay Oboh"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "sqlmodel (>=0.0.37,<0.0.38)",
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "black (>=26.3.1,<27.0.0)",
    "ruff (>=0.15.6,<0.16.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]
